--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <!---------------->
     <script defer src="main.js"></script>
-    <title>Document</title>
+    <title>Interactive Comments Section</title>
   
 </head>
 <body>
